--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "json":"json-server --port 3000 models/database.json"
+    "json": "json-server --port 3000 models/database.json"
   },
   "keywords": [
     "Node",
@@ -18,6 +18,7 @@
   "author": "FelipeRamirez",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^1.0.0-beta.3"
+    "json-server": "^1.0.0-beta.3",
+    "simulador-creditos": "file:"
   }
 }
